tests/errors/no_main_function.ne
function notMain(): int32
{
    return 0;
}
